--- a/app/views/layouts/_topbarlogout.html.erb
+++ b/app/views/layouts/_topbarlogout.html.erb
@@ -22,27 +22,11 @@
               </ul>
           <ul class="pull-right">
             <li id="fat-menu" class="dropdown">
-              <% if current_user.photo_file_name.blank?  %>
-                  <% if current_user.avatar.blank?  %>
-                      <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchiquito"), current_user %>
-                  <%	 else %>
-                      <%= link_to image_tag("http://graph.facebook.com/#{current_user.uid}/picture?type=square", class: "avatarchiquito"), current_user %>
-                  <% end %>
-              <% else %>
-                  <%= link_to image_tag(current_user.photo.url(:square), class: "avatarchiquito"), current_user  %>
-              <%	 end %>
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <%=  current_user.name.first(20) %>
-                <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "Perfil", current_user %></li>
-                <li><%= link_to "Configuración", edit_user_registration_path(current_user) %></li>
-                <li class="divider"></li>
-                <li>
-                  <%= link_to "Salir",  destroy_user_session_path, method: "delete" %>
-                </li>
-              </ul>
+
+                      <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchiquito"),     root_path   %>
+                      <%= link_to "Regístrate ahora!",    root_path   %>
+
+
             </li>
           </ul>
 
