--- a/app/views/estados/show.html.erb
+++ b/app/views/estados/show.html.erb
@@ -87,7 +87,7 @@
                         </div>
                       <div class="caption">
                         <h3><%= link_to estado.name.first(14), estado %> </h3>
-                        <div class="row">
+                        <div class="row" style="max-height: 60px; overflow: hidden">
                           <div class="col-md-4 col-sm-4 col-xs-4">
                             <% if estado.user.photo_file_name.blank?  %>
                                 <% if estado.user.avatar.blank?  %>
@@ -161,17 +161,19 @@
                       <img src="https://s3.amazonaws.com/imagenes.notelimites/micrositios/photos/sitios/big/<%= estado.photo_file_name %>" class="img-responsive img-thumbnail" alt="Responsive image">
                   <% end %>
                   <div class="caption">
-                    <h3><%= link_to estado.nombre, estado %> </h3>
+                    <h3><%= link_to estado.nombre.first(14), estado %> </h3>
 
-                    <div class="row">
-                      <div class="col-md-3">
+                    <div class="row" style="max-height: 60px; overflow: hidden">
+                      <div class="col-md-4 col-sm-4 col-xs-4">
                         <%= link_to image_tag(estado.photo.url(:smallest), class: "avatarchico"), estado.user %>
                       </div>
-                      <div class="col-md-9">
-                        <p>
-                        <div class="descripcionmicrositios">   <%=  estado.descripcion  %>  </div>
-                        </p>
+
+                      <div class="col-md-8 col-sm-8 col-xs-8"  style="margin-left: -10px">
+
                       </div>
+                      <p>
+                      <div class="descripcionmicrositios">   <%=  estado.descripcion  %>  </div>
+                      </p>
                       <div class="col-md-5 col-md-offset-7">
                         <%=	 link_to "Ver más -->", estado %>
                       </div>
