--- a/app/views/layouts/_bodyapp.html.erb
+++ b/app/views/layouts/_bodyapp.html.erb
@@ -77,6 +77,8 @@
     <div id="wrapper">
       <!-- Page content -->
       <div id="page-content-wrapper">
+       <%= render 'layouts/sidebarlogout' %>
+
 
         <div class="hidden-xs">
           <%= render 'layouts/topbarlogout' %>
