--- a/app/views/layouts/actividades.html.erb
+++ b/app/views/layouts/actividades.html.erb
@@ -35,110 +35,7 @@
 
 </script>
 
-
-
-
-<% if signed_in? 	  %>
-
-    <div id="wrapper">
-      <%= render 'layouts/sidebar' %>
-      <div id="sidebarr" class="hidden-sm hidden-xs hidden-md"  >
-        <%= render 'layouts/sidebarright' %>
-      </div>
-
-      <!-- Page content -->
-      <div id="page-content-wrapper">
-
-        <div class="hidden-xs">
-          <%= render 'layouts/topbar' %>
-        </div>
-        <div class="visible-xs">
-          <a id="menu-toggle" href="#" class="btn btn-default"><i class="icon-reorder"></i></a>
-        </div>
-        <!-- Keep all page content within the page-content inset div! -->
-        <div class="page-content inset">
-
-
-          <div class="col-md-10 col-sm-12 col-lg-10">
-            <div class="col-sm-offset-1 col-sm-10 col-xs-10" style="margin-top: 5px; margin-bottom: 5px">
-              <% [:notice, :error, :alert].each do |level| %>
-                  <% unless flash[level].blank? %>
-                      <div data-alert="alert" class="alert-message <%= flash_class(level) %> fade in">
-                        <a class="close" href="#">×</a>
-                        <%= content_tag :p, flash[level] %>
-                      </div>
-                  <% end %>
-              <% end %>
-            </div>
-
-            <%= yield %>
-
-          </div>
-        </div>
-      </div>
-
-
-    </div>
-
-
-
-    <script>
-        $("#menu-toggle").click(function(e) {
-            e.preventDefault();
-            $("#wrapper").toggleClass("active");
-        });
-    </script>
-
-
-
-
-
-<%  else %>
-    <div id="wrapper">
-      <!-- Page content -->
-      <div id="page-content-wrapper">
-
-        <div class="hidden-xs">
-          <%= render 'layouts/topbarlogout' %>
-        </div>
-        <div class="visible-xs">
-          <a id="menu-toggle" href="#" class="btn btn-default"><i class="icon-reorder"></i></a>
-        </div>
-        <!-- Keep all page content within the page-content inset div! -->
-        <div class="page-content inset">
-
-
-          <div class="col-md-10 col-sm-12 col-lg-10">
-            <div class="col-sm-offset-1 col-sm-10 col-xs-10" style="margin-top: 5px; margin-bottom: 5px">
-              <% [:notice, :error, :alert].each do |level| %>
-                  <% unless flash[level].blank? %>
-                      <div data-alert="alert" class="alert-message <%= flash_class(level) %> fade in">
-                        <a class="close" href="#">×</a>
-                        <%= content_tag :p, flash[level] %>
-                      </div>
-                  <% end %>
-              <% end %>
-            </div>
-
-            <%= yield %>
-
-          </div>
-        </div>
-      </div>
-
-
-    </div>
-
-
-
-    <script>
-        $("#menu-toggle").click(function(e) {
-            e.preventDefault();
-            $("#wrapper").toggleClass("active");
-        });
-    </script>
-<% end %>
-
+<%=	 render "layouts/bodyapp" %>
 
 </body>
 </html>
