--- a/app/views/micrositios/index.html.erb
+++ b/app/views/micrositios/index.html.erb
@@ -1,37 +1,57 @@
 
 
-    <h1>Todos los micrositios</h1>
+    <h1>Todos los lugares</h1>
 
 
-    <div class="row">
-      <%=	 form_tag micrositios_path , :method => 'get' do %>
-          </p>
-        <div id="search">  <%= text_field_tag :search, params[:search] %>   </div>
-          <%= submit_tag "Search", :name => nil %>
-          </p>
-      <%	 end %>
-    </div>
+    <% @micrositios.limit(20).order("RANDOM()").each do |estado| %>
+        <ul class="thumbnail col-md-4 col-lg-3 col-sm-6 col-xs-12">
 
-
-    <div  id="micrositiocontainer">
-
-      <ul>
-        <% @micrositios.take(19).each do |micrositio| %>
-            <% if micrositio.photo_file_size? %>
-                <li id="cadaevento">
-                  <%= link_to micrositio.name, micrositio %>
-                  <%= image_tag micrositio.photo.url(:small) %>
-                  <%= micrositio.imagen %>
+          <div style="height: 250px">
+            <% if estado.photo_file_size? %>
+                <%= image_tag estado.photo.url(:big), class: "img-responsive", alt: "responsive image", height: 250 %>
             <% else %>
-                <li id="cadaevento">
-                  <%= link_to micrositio.name, micrositio %>
-                  <img src="https://s3.amazonaws.com/imagenes.notelimites/micrositios/photos/sitios/big/<%= micrositio.photo_file_name %>"    >
-                  <%= micrositio.imagen %>
+                <img src="https://s3.amazonaws.com/imagenes.notelimites/micrositios/photos/sitios/big/<%= estado.photo_file_name %>" height="250px" width="100%" alt="Responsive image">
             <% end %>
+          </div>
+          <div class="caption">
+            <h3><%= link_to estado.name.first(14), estado %> </h3>
+            <div class="row" style="max-height: 60px; overflow: hidden">
 
-        <% end %>
 
-      </ul>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <p>
+                <div class="descripcionmicrositios">   <%=  estado.descripcion  %>  </div>
+                </p>
+              </div>
+            </div>
+            <div class="row " style="margin-bottom: 10px; font-weight: bold">
+              <div class="col-md-8 col-md-offset-2">
+                <%=	 link_to "Ver más -->", estado %>
+              </div>
+            </div>
+            <div class="row" style="margin-top: 5px">
+              <div class="col-md-6 col-sm-6 col-xs-6">
+                <div id="follow_form" >
+                  <% if current_user.followingestado?(estado) %>
+                      <%= form_for(current_user.relationestados.find_by(followed_id: estado), html: { method: :delete }) do |f| %>
+                          <%= f.submit "Siguiendo", class: "btn " %>
+                      <% end %>
+                  <% else %>
+                      <%= form_for(current_user.relationestados.build(followed_id: estado.id)) do |f| %>
+                          <div><%= f.hidden_field :followed_id %></div>
+                          <%= f.submit "Seguir", class: "btn  btn-primary" %>
+                      <% end %>
+                  <% end %>
+                </div>
+              </div>
+              <div class="col-md-4 col-sm-6 col-xs-6 estadocontador">
+                <%= estado.followers.count%>
+                lo siguen
+              </div>
 
-
-    </div>
+            </div>
+          </div>
+        </ul>
+    <% end %>
